--- a/sections/ks-dawn-inventory-bar.liquid
+++ b/sections/ks-dawn-inventory-bar.liquid
@@ -34,6 +34,7 @@
 {%- stylesheet -%}
   #ks-inventory-bar {
     transition: all .2s ease-out;
+    max-width: 44rem;
   }
 
   #ks-inventory-bar-text {
